// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolConfirmationMessage > should display urls if prompt and url are different 1`] = `
"fetch https://github.com/google/gemini-react/blob/main/README.md

URL-адреси для отримання:
 - https://raw.githubusercontent.com/google/gemini-react/main/README.md

Бажаєте продовжити?

● 1. Дозволити один раз
  2. Дозволити для цієї сесії
  3. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > should not display urls if prompt and url are the same 1`] = `
"https://example.com

Бажаєте продовжити?

● 1. Дозволити один раз
  2. Дозволити для цієї сесії
  3. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for edit confirmations' > should NOT show "allow always" when folder is untrusted 1`] = `
"╭───────────────────╮
│                   │
│ Змін не виявлено. │
│                   │
╰───────────────────╯

Застосувати цю зміну?

● 1. Дозволити один раз
  2. Редагувати у зовнішньому редакторі
  3. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for edit confirmations' > should show "allow always" when folder is trusted 1`] = `
"╭───────────────────╮
│                   │
│ Змін не виявлено. │
│                   │
╰───────────────────╯

Застосувати цю зміну?

● 1. Дозволити один раз
  2. Дозволити для цієї сесії
  3. Редагувати у зовнішньому редакторі
  4. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for exec confirmations' > should NOT show "allow always" when folder is untrusted 1`] = `
"echo "hello"

Дозволити виконання: 'echo'?

● 1. Дозволити один раз
  2. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for exec confirmations' > should show "allow always" when folder is trusted 1`] = `
"echo "hello"

Дозволити виконання: 'echo'?

● 1. Дозволити один раз
  2. Дозволити для цієї сесії
  3. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for info confirmations' > should NOT show "allow always" when folder is untrusted 1`] = `
"https://example.com

Бажаєте продовжити?

● 1. Дозволити один раз
  2. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for info confirmations' > should show "allow always" when folder is trusted 1`] = `
"https://example.com

Бажаєте продовжити?

● 1. Дозволити один раз
  2. Дозволити для цієї сесії
  3. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for mcp confirmations' > should NOT show "allow always" when folder is untrusted 1`] = `
"Сервер MCP: test-server
Інструмент: test-tool

Дозволити виконання MCP-інструменту "test-tool" із сервера "test-server"?

● 1. Дозволити один раз
  2. Ні, запропонувати зміни (esc)
"
`;

exports[`ToolConfirmationMessage > with folder trust > 'for mcp confirmations' > should show "allow always" when folder is trusted 1`] = `
"Сервер MCP: test-server
Інструмент: test-tool

Дозволити виконання MCP-інструменту "test-tool" із сервера "test-server"?

● 1. Дозволити один раз
  2. Дозволити інструмент для цієї сесії
  3. Дозволити всі інструменти сервера для цієї сесії
  4. Ні, запропонувати зміни (esc)
"
`;
